fix large A not showing up

--- a/styles.css
+++ b/styles.css
@@ -114,3 +114,7 @@ a.onkcGd.kj3hr.YVvGBb > div.YVvGBb {
 a.onkcGd.kj3hr.YVvGBb > div.nk37z.YVvGBb.csjh4b {
     color: white !important;
 }
+
+a.onkcGd.rpo4wf.nk37z.zZN2Lb-Wvd9Cc.VBEdtc-Wvd9Cc {
+    color: #3c4043 !important;
+}
